<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="5"
    tools:context=".screens.LoginActivity">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="0dp"
    android:layout_weight="2">

    <ImageView
        android:id="@+id/logoIv"
        android:layout_width="195dp"
        android:layout_height="107dp"
        android:layout_marginTop="28dp"
        android:src="@drawable/ic_login_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/Bk_logo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:padding="8dp"
        style="@style/Widget.FactsApp.TextView"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logoIv" />
    
</androidx.constraintlayout.widget.ConstraintLayout>
    
 <LinearLayout
     android:id="@+id/layout_two"
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:layout_weight="3"
     android:orientation="vertical"
     android:padding="10dp"
     android:background="@drawable/layout_two_bg">

     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:layout_marginTop="34dp"
         android:autofillHints="@string/prompt_email"
         android:hint="@string/prompt_email"
         app:layout_constraintEnd_toEndOf="parent">

         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress" />
     </com.google.android.material.textfield.TextInputLayout>


     <com.google.android.material.textfield.TextInputLayout
         android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="76dp"
         android:layout_marginTop="24dp"
         android:hint="@string/prompt_password"
         app:endIconMode="password_toggle"
         app:layout_constraintEnd_toEndOf="parent">

         <com.google.android.material.textfield.TextInputEditText
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword" />
     </com.google.android.material.textfield.TextInputLayout>


     <Button
         android:id="@+id/loginBtn"
         style="@style/Widget.FactsApp.Button"
         android:layout_width="200dp"
         android:layout_height="59dp"
         android:layout_marginStart="76dp"
         android:layout_marginTop="52dp"
         android:text="@string/btn_sign_in"
         android:background="@drawable/round_button"/>

 </LinearLayout>
</LinearLayout>